--- a/join.html
+++ b/join.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="hi">
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>URP से जुड़ें — Uttarakhand Reform Party</title>
+  <title>Join URP — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Uttarakhand Reform Party (URP) से सदस्य, स्वयंसेवक या स्थानीय आयोजक के रूप में जुड़ें। प्रक्रिया सरल, डिजिटल और पारदर्शी है।">
+  <meta name="description" content="Join Uttarakhand Reform Party (URP) as a member, volunteer or local organiser. Simple, digital and transparent process.">
 
   <style>
     :root{
@@ -47,7 +47,6 @@
       align-items:center;
       gap:10px;
     }
-    /* नया logo image (पुराना .logo-mark हटा दिया गया) */
     .logo-img{
       width:44px;
       height:44px;
@@ -194,7 +193,6 @@
   <header class="header">
     <div class="container nav">
       <div class="logo-wrap">
-        <!-- नया logo यहां -->
         <img src="logo%20urp.png" alt="URP logo" class="logo-img">
         <div class="brand-title">Uttarakhand Reform Party</div>
       </div>
@@ -213,12 +211,11 @@
     <!-- HERO -->
     <section class="hero">
       <div class="container">
-        <div class="hero-kicker">जॉइन • सदस्यता और स्वयंसेवक</div>
-        <h1 class="hero-title">URP से जुड़ें — बदलाव की राजनीति में अपना योगदान दें</h1>
+        <div class="hero-kicker">JOIN • MEMBERSHIP & VOLUNTEERS</div>
+        <h1 class="hero-title">Join URP — contribute to constructive politics</h1>
         <p class="hero-sub">
-          Uttarakhand Reform Party में सदस्यता की प्रक्रिया सरल, डिजिटल और पारदर्शी है। 
-          कोई छुपा हुआ फ़ॉर्म या बंद समूह नहीं — हर जागरूक नागरिक, भूतपूर्व सैनिक, युवा, 
-          महिला और पेशेवर का स्वागत है।
+          Membership in Uttarakhand Reform Party is simple, digital and transparent. 
+          There are no hidden forms or closed groups — aware citizens, ex-servicemen, youth, women and professionals are all welcome.
         </p>
       </div>
     </section>
@@ -229,26 +226,26 @@
         <!-- LEFT: STEPS -->
         <div>
           <div class="card">
-            <h3>सदस्यता लेने के 4 आसान चरण</h3>
+            <h3>Four simple steps to become a member</h3>
             <ul class="timeline">
-              <li><strong>ऑनलाइन फ़ॉर्म भरें:</strong> नीचे दिया गया Google फ़ॉर्म भरें — नाम, मोबाइल, EPIC, ज़िला/विधानसभा आदि।</li>
-              <li><strong>सत्यापन (Verification):</strong> ज़िला / विधानसभा समन्वयक 7–10 दिन के भीतर आपसे कॉल या WhatsApp के ज़रिए संपर्क करेगा।</li>
-              <li><strong>भूमिका तय करें:</strong> आप स्वयंसेवक, बूथ-स्तर, वार्ड-स्तर या डिजिटल टीम में कैसे योगदान देना चाहते हैं, यह मिलकर तय होगा।</li>
-              <li><strong>टीम में औपचारिक रूप से शामिल:</strong> आपको आधिकारिक WhatsApp / ईमेल समूह से जोड़ा जाएगा और बैठक व प्रशिक्षण की जानकारी दी जाएगी।</li>
+              <li><strong>Fill the online form:</strong> Complete the Google Form below with your name, mobile number, EPIC, district and assembly details.</li>
+              <li><strong>Verification:</strong> A district / assembly coordinator will contact you within 7–10 days through call or WhatsApp.</li>
+              <li><strong>Decide your role:</strong> Together we will decide how you would like to contribute — as a volunteer, at booth/ward level or in digital teams.</li>
+              <li><strong>Join an official team:</strong> You will be added to official WhatsApp / email groups and informed about meetings and trainings.</li>
             </ul>
             <div class="badge-row">
-              <div class="badge">अभी कोई सदस्यता शुल्क नहीं</div>
-              <div class="badge">डिजिटल रिकॉर्ड और आईडी</div>
-              <div class="badge">विधानसभा-वार स्वयंसेवक नेटवर्क</div>
+              <div class="badge">No joining fee at present</div>
+              <div class="badge">Digital record & ID</div>
+              <div class="badge">Constituency-wise volunteer network</div>
             </div>
           </div>
 
           <div class="card" style="margin-top:14px;">
-            <h4>कौन-कौन जुड़ सकता है?</h4>
+            <h4>Who can join?</h4>
             <ul class="timeline">
-              <li>18 वर्ष या उससे अधिक आयु, और उत्तराखंड से संबंध (निवासी / मतदाता / मूल निवासी)।</li>
-              <li>किसी भी धर्म, जाति, क्षेत्र या भाषा से — बिना किसी भेदभाव के।</li>
-              <li>किसी गंभीर आपराधिक मामले में दोषी न हों।</li>
+              <li>Anyone 18 years or above with a strong connection to Uttarakhand (resident, voter or origin).</li>
+              <li>People from all communities, faiths, regions and languages — with zero discrimination.</li>
+              <li>Persons not convicted in any serious criminal case.</li>
             </ul>
           </div>
         </div>
@@ -256,23 +253,22 @@
         <!-- RIGHT: GOOGLE FORM -->
         <div>
           <p class="small" style="margin-bottom:8px;">
-            नीचे दिया गया सदस्यता फ़ॉर्म सीधे Google Forms से जुड़ा है — आपकी जानकारी सुरक्षित रूप से 
-            सीधे Google Sheet में दर्ज होगी।
+            The membership form below is directly connected to Google Forms — your details are safely stored in a secure Google Sheet.
           </p>
           <iframe 
             src="https://docs.google.com/forms/d/e/1FAIpQLSeIXaDJojCZDJYDThfXSX-bIx3CozwdTyEp2hXWzdptEozBZg/viewform?embedded=true"
             height="950"
             loading="lazy">
-            लोड हो रहा है…
+            Loading…
           </iframe>
           <p class="small" style="margin-top:6px;">
-            अगर फ़ॉर्म दिखाई न दे, तो 
+            If you cannot see the form, please use 
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIXaDJojCZDJYDThfXSX-bIx3CozwdTyEp2hXWzdptEozBZg/viewform?usp=sf_link" 
                target="_blank" 
                style="color:var(--primary-soft);font-weight:600;">
-              इस सीधे लिंक
+              this direct link
             </a> 
-            पर क्लिक करके फ़ॉर्म भर सकते हैं।
+            to open it in a new tab.
           </p>
         </div>
       </div>
@@ -284,14 +280,14 @@
     <div class="container footer-grid">
       <div>
         <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">उत्तराखंड के लिए सुधार-केंद्रित राजनीतिक मंच।</div>
+        <div class="small">A reform-focused political platform for Uttarakhand.</div>
       </div>
       <div class="small">
         <div>Contact: contact@uttarakhandreform.org</div>
         <div>Phone: +91 98765 43210</div>
       </div>
       <div class="small">
-        <div><a href="candidates.html">उम्मीदवार के रूप में आवेदन करें</a></div>
+        <div><a href="candidates.html">Express interest as a candidate</a></div>
       </div>
     </div>
   </footer>
