--- a/candidates.html
+++ b/candidates.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="hi">
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>उम्मीदवार चयन — Uttarakhand Reform Party</title>
+  <title>Candidate Selection — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Uttarakhand Reform Party (URP) की साफ़ और पारदर्शी उम्मीदवार चयन नीति — योग्यता, आचरण और ज़मीनी काम के आधार पर टिकट।">
+  <meta name="description" content="URP’s clean and transparent candidate selection policy — tickets based on integrity, public conduct, ground work and people’s trust.">
 
   <style>
     :root{
@@ -47,7 +47,6 @@
       align-items:center;
       gap:10px;
     }
-    /* ⬇️ नया image-logo class */
     .logo-img{
       width:44px;
       height:44px;
@@ -202,7 +201,6 @@
   <header class="header">
     <div class="container nav">
       <div class="logo-wrap">
-        <!-- नया logo image -->
         <img src="logo%20urp.png" alt="URP logo" class="logo-img">
         <div class="brand-title">Uttarakhand Reform Party</div>
       </div>
@@ -221,11 +219,11 @@
     <!-- HERO -->
     <section class="hero">
       <div class="container">
-        <div class="hero-kicker">उम्मीदवार • टिकट नीति</div>
-        <h1 class="hero-title">साफ़ और पारदर्शी चयन प्रक्रिया — यही URP की उम्मीदवार नीति</h1>
+        <div class="hero-kicker">CANDIDATES • TICKET POLICY</div>
+        <h1 class="hero-title">Clean and transparent selection — URP’s candidate policy</h1>
         <p class="hero-sub">
-          URP में टिकट किसी दबाव या सिफ़ारिश से नहीं, बल्कि साफ़ छवि, ज़मीनी काम और जनता के भरोसे के आधार पर दिया जाएगा।
-          लक्ष्य यह है कि हर क्षेत्र को ऐसा उम्मीदवार मिले जिस पर लोग निश्चिंत होकर भरोसा कर सकें।
+          In URP, tickets are not given through pressure or personal recommendation. 
+          They are based on integrity, ground work and people’s trust, so that every area gets a candidate whom citizens can rely on.
         </p>
       </div>
     </section>
@@ -235,27 +233,27 @@
       <div class="container two-col">
         <div>
           <div class="card">
-            <h3>उम्मीदवार के लिए आवश्यक योग्यता</h3>
+            <h3>Eligibility for candidates</h3>
             <ul class="timeline">
-              <li>उम्र कम-से-कम 25 वर्ष हो और संबंधित विधानसभा से मज़बूत जुड़ाव हो (मतदाता, निवासी या लंबे समय से सामाजिक कार्य)।</li>
-              <li>साफ़ सार्वजनिक छवि — किसी बड़े भ्रष्टाचार या हिंसक अपराध में दोषी न हों।</li>
-              <li>कम-से-कम 2–3 वर्ष का सामाजिक या सार्वजनिक काम का अनुभव (जैसे शिक्षा, स्वास्थ्य, युवाओं के साथ काम, किसान या मज़दूर मुद्दे आदि)।</li>
-              <li>URP के मूल मूल्यों, संविधान और कानून के प्रति स्पष्ट सम्मान और लिखित सहमति।</li>
+              <li>Minimum 25 years of age, with a strong connection to the constituency (voter, resident or long-term social work).</li>
+              <li>Clean public image — not convicted in major corruption or serious violent crime.</li>
+              <li>At least 2–3 years of social or public service experience (for example in education, health, youth, farmers or workers’ issues).</li>
+              <li>Clear written commitment to URP’s core values, the Constitution and rule of law.</li>
             </ul>
           </div>
         </div>
 
         <div>
           <div class="card">
-            <h3>ऐसे लोग जिन्हें टिकट नहीं दिया जाएगा</h3>
+            <h3>Who will not be considered</h3>
             <ul class="timeline">
-              <li>गंभीर आपराधिक मामलों (हत्या, बलात्कार, बड़े घोटाले आदि) में दोषी या बार-बार आरोपित व्यक्ति।</li>
-              <li>धर्म, जाति या क्षेत्र के नाम पर नफ़रत फैलाने का स्पष्ट और दोहराया गया इतिहास।</li>
-              <li>लगातार दल बदलने वाले ऐसे लोग जिनका किसी क्षेत्र में स्थायी जनाधार या सामाजिक काम स्पष्ट न हो।</li>
+              <li>Persons convicted or repeatedly charge-sheeted in serious criminal cases (murder, sexual violence, major scams, etc.).</li>
+              <li>People with a clear record of hate politics in the name of religion, caste or region.</li>
+              <li>Those who frequently change parties without any stable public base or social work in a specific area.</li>
             </ul>
             <div class="tag-row">
-              <div class="tag">साफ़ छवि</div>
-              <div class="tag">घृणा-राजनीति से दूरी</div>
+              <div class="tag">Clean image</div>
+              <div class="tag">Zero-tolerance for hate politics</div>
             </div>
           </div>
         </div>
@@ -266,55 +264,54 @@
     <section class="section">
       <div class="container">
         <div class="section-header">
-          <h2>उम्मीदवार कैसे चुने जाएँगे?</h2>
+          <h2>How will candidates be selected?</h2>
           <p>
-            प्रक्रिया का लक्ष्य यह है कि कार्यकर्ता और आम मतदाता दोनों महसूस करें कि टिकट ईमानदारी से दिया गया है,
-            किसी छुपे दबाव या सौदेबाज़ी से नहीं।
+            The aim is that both workers and ordinary voters feel that tickets are given fairly,
+            without hidden deals or pressure.
           </p>
         </div>
         <div class="two-col">
           <div class="card">
-            <h4>चरण 1 — रुचि दर्ज करना</h4>
+            <h4>Step 1 — Expression of interest</h4>
             <p class="small">
-              जो लोग भविष्य में URP से चुनाव लड़ना चाहते हैं, वे सबसे पहले पार्टी के सक्रिय सदस्य बनेंगे। 
-              इसके बाद उनसे अलग से लिखित रूप में जानकारी ली जाएगी — वे किस सीट से लड़ना चाहते हैं, अब तक का सामाजिक काम क्या है,
-              और अपने क्षेत्र के लिए उनकी सोच क्या है।
+              Anyone who wishes to contest elections with URP will first become an active member of the party.
+              Afterwards, a separate form will record details such as the desired seat, nature of past work and their vision for the constituency.
             </p>
             <ul class="timeline">
-              <li>स्थानीय टीम उम्मीदवार से प्रारम्भिक बातचीत करके बुनियादी जानकारी समझेगी।</li>
-              <li>उम्मीदवार के सार्वजनिक व्यवहार और काम के बारे में लोगों से सामान्य प्रतिक्रिया ली जाएगी।</li>
+              <li>Local teams will hold initial conversations to understand the background and motivation of each aspirant.</li>
+              <li>Basic feedback on public behaviour and work will be gathered from citizens.</li>
             </ul>
           </div>
 
           <div class="card">
-            <h4>चरण 2 — ज़मीनी प्रतिक्रिया</h4>
+            <h4>Step 2 — Ground feedback</h4>
             <p class="small">
-              केवल कागज़ पर नहीं, क्षेत्र के लोगों से बातचीत करके देखा जाएगा कि जो व्यक्ति टिकट चाहता है,
-              क्या उसे लोग सच में अपना प्रतिनिधि मानते हैं या नहीं।
+              Decisions will not be based only on paperwork. People in the area will be consulted to check whether
+              they genuinely see the person as their representative.
             </p>
             <ul class="timeline">
-              <li>स्थानीय कार्यकर्ताओं, युवाओं, महिलाओं और विभिन्न समुदायों से खुली बातचीत।</li>
-              <li>मुद्दों पर उम्मीदवार की समझ और लोगों के साथ उसके व्यवहार पर विशेष ध्यान।</li>
+              <li>Open discussions with local workers, youth, women and community groups.</li>
+              <li>Special focus on how clearly the aspirant understands key issues and how they engage with people.</li>
             </ul>
           </div>
 
           <div class="card">
-            <h4>चरण 3 — समिति द्वारा समीक्षा</h4>
+            <h4>Step 3 — Committee review</h4>
             <p class="small">
-              ज़िला और राज्य स्तर की मिलीजुली समिति उम्मीदवार के बारे में प्राप्त जानकारी की समीक्षा करेगी।
+              A joint district and state-level committee will review the information received about each aspirant.
             </p>
             <ul class="timeline">
-              <li>छवि और आचरण — क्या व्यक्ति लोगों के बीच भरोसेमंद माना जाता है?</li>
-              <li>ज़मीनी काम — क्या उसने अपने क्षेत्र में लगातार और गंभीर काम किया है?</li>
-              <li>टीम के साथ काम करने की क्षमता — क्या वह स्वयंसेवकों और कार्यकर्ताओं के साथ समन्वय बना पाता है?</li>
+              <li>Image and conduct — does the person enjoy public trust?</li>
+              <li>Ground work — have they consistently worked on issues in the constituency?</li>
+              <li>Ability to work with teams — can they coordinate with volunteers and party workers?</li>
             </ul>
           </div>
 
           <div class="card">
-            <h4>चरण 4 — घोषणा और जवाबदेही</h4>
+            <h4>Step 4 — Announcement & accountability</h4>
             <p class="small">
-              टिकट तय होने के बाद उम्मीदवार की मुख्य जानकारी, पृष्ठभूमि और सार्वजनिक संकल्प पार्टी की वेबसाइट और सार्वजनिक मंचों पर साझा की जाएगी,
-              ताकि लोग साफ़-साफ़ जान सकें कि उन्हें किस आधार पर चुना गया है।
+              Once a ticket is finalised, key information about the candidate, their background and public commitments
+              will be shared openly on the website and public platforms so that citizens know why they were chosen.
             </p>
           </div>
         </div>
@@ -325,19 +322,19 @@
     <section class="section">
       <div class="container">
         <div class="card">
-          <h3>भविष्य में URP से चुनाव लड़ने की इच्छा है?</h3>
+          <h3>Interested in contesting with URP in the future?</h3>
           <p class="small" style="margin-top:4px;">
-            अभी पहला और सबसे महत्वपूर्ण क़दम यह है कि आप <strong>सक्रिय सदस्य</strong> के रूप में जुड़ें,
-            अपने क्षेत्र में लगातार काम शुरू करें और लोगों के बीच अपना भरोसेमंद रिश्ता बनाएं।
+            The first and most important step is to become an <strong>active member</strong>, start consistent work in your area
+            and build a relationship of trust with people.
           </p>
           <p class="small" style="margin-top:6px;">
-            आने वाले समय में जब उम्मीदवारों के लिए औपचारिक आवेदन प्रक्रिया शुरू की जाएगी,
-            तो पहले से जुड़े और काम कर रहे सदस्यों को ईमेल / फ़ोन / WhatsApp के माध्यम से जानकारी दी जाएगी।
+            When the formal application process for candidates is opened, members who are already working on the ground
+            will be informed through email / phone / WhatsApp.
           </p>
           <p class="small" style="margin-top:8px;">
-            👉 शुरुआत यहीं से करें — 
-            <a href="join.html" style="color:var(--primary-soft);font-weight:600;">Join पेज</a> पर जाएँ,
-            सदस्यता फ़ॉर्म भरें और अपने ज़िले की टीम के संपर्क में रहें।
+            👉 Start here — visit the
+            <a href="join.html" style="color:var(--primary-soft);font-weight:600;">Join page</a>,
+            fill the membership form and stay in touch with your district team.
           </p>
         </div>
       </div>
@@ -349,14 +346,14 @@
     <div class="container footer-grid">
       <div>
         <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">उत्तराखंड के लिए सुधार-केंद्रित राजनीतिक मंच।</div>
+        <div class="small">A reform-focused political platform for Uttarakhand.</div>
       </div>
       <div class="small">
         <div>Contact: contact@uttarakhandreform.org</div>
         <div>Phone: +91 98765 43210</div>
       </div>
       <div class="small">
-        <div><a href="join.html">सदस्य / स्वयंसेवक के रूप में जुड़ें</a></div>
+        <div><a href="join.html">Join as member / volunteer</a></div>
       </div>
     </div>
   </footer>
