--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="hi">
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>संपर्क — Uttarakhand Reform Party</title>
+  <title>Contact — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Uttarakhand Reform Party (URP) से सुझाव, शिकायत या सहयोग के लिए संपर्क करें — ईमेल, फ़ोन और ज़िला समन्वय की जानकारी।">
+  <meta name="description" content="Contact Uttarakhand Reform Party (URP) for suggestions, complaints, local issues or collaboration — email, phone and district coordination details.">
 
   <style>
     :root{
@@ -163,11 +163,12 @@
   <!-- HERO -->
   <section class="hero">
     <div class="container">
-      <div class="hero-kicker">संपर्क • URP से जुड़ें</div>
-      <h1 class="hero-title">हमसे सीधे संपर्क करें</h1>
+      <div class="hero-kicker">CONTACT • CONNECT WITH URP</div>
+      <h1 class="hero-title">Contact us directly</h1>
       <p class="hero-sub">
-        सुझाव, शिकायत, स्थानीय समस्या, शोध-विचार या सहयोग — किसी भी विषय पर आप URP तक सीधे पहुँचे।
-        आपका feedback और आपका अनुभव ही आने वाले समय में बेहतर नीतियाँ बनाने की सबसे बड़ी ताकत होगा।
+        For suggestions, complaints, local issues, research inputs or collaboration — 
+        you can reach URP directly. Your feedback and experience will be an important input 
+        for building better policies in the future.
       </p>
     </div>
   </section>
@@ -176,38 +177,38 @@
   <section class="section">
     <div class="container grid">
       <div class="card">
-        <h3>केंद्रीय संपर्क (राज्य स्तर)</h3>
+        <h3>Central contact (state level)</h3>
         <p class="small">
-          <strong>ईमेल:</strong> contact@uttarakhandreform.org<br>
-          <strong>फ़ोन:</strong> +91 98765 43210<br>
-          <strong>समय:</strong> सुबह 10:00 बजे से शाम 6:00 बजे तक (सोमवार–शनिवार)
+          <strong>Email:</strong> contact@uttarakhandreform.org<br>
+          <strong>Phone:</strong> +91 98765 43210<br>
+          <strong>Timings:</strong> 10:00 AM – 6:00 PM (Monday–Saturday)
         </p>
         <p class="small" style="margin-top:8px;">
-          यहाँ से आपका संदेश संबंधित ज़िले या टीम तक भेजा जाएगा।  
-          कृपया विषय स्पष्ट लिखें — जैसे “सुझाव”, “शिकायत”, “स्थानीय समस्या”, “स्वयंसेवक के रूप में जुड़ना” आदि।
+          Your message will be routed to the relevant district or team.  
+          Please mention a clear subject such as “Suggestion”, “Complaint”, “Local issue” or “Join as volunteer”.
         </p>
       </div>
 
       <div class="card">
-        <h3>ज़िला समन्वय</h3>
+        <h3>District coordination</h3>
         <p class="small">
-          हर ज़िले में एक <strong>ज़िला समन्वयक</strong> होगा जो सदस्यता, स्वयंसेवकों और स्थानीय बैठकों का समन्वय करेगा।
+          Each district will have a <strong>district coordinator</strong> responsible for membership, volunteers and local meetings.
         </p>
         <p class="small" style="margin-top:6px;">
-          अभी के लिए कृपया अपने ईमेल में ज़िले और विधानसभा का नाम ज़रूर लिखें।  
-          संबंधित टीम का सदस्य आपकी सुविधानुसार फ़ोन या WhatsApp के माध्यम से आपसे संपर्क करेगा।
+          For now, please mention your district and assembly constituency clearly in your email.  
+          A team member will contact you by phone or WhatsApp at a convenient time.
         </p>
       </div>
 
       <div class="card">
-        <h3>सोशल मीडिया व अपडेट</h3>
+        <h3>Social media & updates</h3>
         <p class="small">
-          आधिकारिक सोशल मीडिया पेज और चैनल चरणबद्ध तरीके से शुरू किए जाएँगे।  
-          जैसे ही वे सक्रिय होंगे, उनकी जानकारी इसी पेज पर साझा की जाएगी।
+          Official social media pages and channels will be launched in phases. 
+          As they become active, details will be shared on this page.
         </p>
         <p class="small" style="margin-top:6px;">
-          लक्ष्य यह रहेगा कि नीति-संबंधी जानकारी, छोटे वीडियो, पहाड़ से ग्राउंड रिपोर्ट और
-          महत्त्वपूर्ण घोषणाएँ समय-समय पर सार्वजनिक रूप से साझा की जाएँ।
+          The aim is to regularly share policy information, short videos, ground reports from the hills 
+          and important announcements in a transparent manner.
         </p>
       </div>
     </div>
@@ -217,18 +218,18 @@
   <section class="section">
     <div class="container">
       <div class="card">
-        <h3>स्थानीय समस्या या ग्राउंड रिपोर्ट भेजना चाहते हैं?</h3>
+        <h3>Want to send a local issue or ground report?</h3>
         <p class="small" style="margin-top:4px;">
-          सड़क, पानी, स्कूल, अस्पताल, जंगल, पलायन, रोज़गार या अन्य किसी स्थानीय मुद्दे पर
-          आप विस्तार से अपना अनुभव साझा करना चाहें तो कृपया:
+          If you wish to describe a local issue in detail — related to roads, water, schools, hospitals, forests,
+          migration, employment or any other topic — please:
         </p>
         <ul class="small" style="margin-top:6px;list-style:disc;padding-left:18px;">
-          <li>ईमेल के विषय (Subject) में ज़िला और विधानसभा का नाम लिखें।</li>
-          <li>समस्या क्या है, उससे लोगों पर क्या असर पड़ रहा है और आपके अनुसार समाधान क्या हो सकता है — यह बिंदुवार लिखें।</li>
-          <li>यदि उपलब्ध हों तो फ़ोटो या संबंधित दस्तावेज़ भी साथ में संलग्न करें।</li>
+          <li>Mention district and assembly seat in the email subject line.</li>
+          <li>Explain the problem, its impact on people and what you think could be a practical solution.</li>
+          <li>Attach photos or relevant documents if available.</li>
         </ul>
         <p class="small" style="margin-top:6px;">
-          इस तरह से मिलने वाली जानकारी को नीति-निर्माण और भविष्य की जनघोषणाओं में ध्यान में रखा जाएगा।
+          Such information will be used as input while designing policies and future public commitments.
         </p>
       </div>
     </div>
@@ -239,11 +240,11 @@
   <div class="container footer-grid">
     <div>
       <div>© 2025 Uttarakhand Reform Party</div>
-      <div class="small">उत्तराखंड के लिए सुधार-केंद्रित राजनीतिक मंच।</div>
+      <div class="small">A reform-focused political platform for Uttarakhand.</div>
     </div>
     <div class="small">
       <div>contact@uttarakhandreform.org</div>
-      <div>फ़ोन: +91 98765 43210</div>
+      <div>Phone: +91 98765 43210</div>
     </div>
   </div>
 </footer>
