--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <meta name="description" content="URP is a reform-focused political platform committed to transparent governance, mountain-first development, youth leadership, women’s safety and rural livelihoods in Uttarakhand.">
 
   <style>
+    .lang-switch{
+  margin-left:15px;
+  font-weight:600;
+}
+
+.lang-switch .lang{
+  color:#ffffff;
+  font-size:13px;
+  opacity:0.9;
+}
+
+.lang-switch .lang.active{
+  color:#f39c12;
+  border-bottom:1px solid #f39c12;
+}
     :root{
       --primary:#0a3d62;
       --primary-soft:#174c91;
@@ -385,6 +400,10 @@
         <a href="join.html">Join</a>
         <a href="candidates.html">Candidates</a>
         <a href="contact.html">Contact</a>
+        <span class="lang-switch">
+  <a href="index.html" class="lang active">EN</a> |
+  <a href="index-hi.html" class="lang">HI</a>
+</span>
       </nav>
     </div>
   </header>
