--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <a href="contact.html">Contact</a>
         <span class="lang-switch">
   <a href="index.html" class="lang active">EN</a> |
-  <a href="index-hi.html" class="lang">HI</a>
+  <a href="index-hi.html" class="lang">हिंदी</a>
 </span>
       </nav>
     </div>
