--- a/about.html
+++ b/about.html
@@ -189,6 +189,10 @@
       <a href="join.html">Join</a>
       <a href="candidates.html">Candidates</a>
       <a href="contact.html">Contact</a>
+      <span class="lang-switch">
+  <a href="about.html" class="lang active">EN</a> |
+  <a href="about-hi.html" class="lang">हिंदी</a>
+</span>
     </nav>
   </div>
 </header>
